--- a/proyecto1/blogpost.html
+++ b/proyecto1/blogpost.html
@@ -14,6 +14,9 @@
                 <p>los blogs son la mejor forma de compartir informacion</p>
                 <p>suscribete y dale like</p>
             </div>
+            <div id="fooder">
+                hecho con amor por vane
+            </div>
         </div>
     </body>
 </html>
