--- a/proyecto1/blogpost.html
+++ b/proyecto1/blogpost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> Bienvenido a hiperblog 2.0</title>
-        <link rel="stylesheet" href="css/estilos.css"
+        <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
         <div id="container">
@@ -11,9 +11,12 @@
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
-                <p>y este parrafo es el inicio donde vamos a explicar las ramas que crearemos</p>
-                <p>los blogs son la mejor forma de compartir informacion</p>
+                <p>y este párrafo es el inicio donde vamos a explicar las ramas que crearemos</p>
+                <p>los blogs son la mejor forma de compartir información</p>
                 <p>suscribete y dale like</p>
+            </div>
+            <div id="footer">
+                hecho con amor en platzi
             </div>
         </div>
     </body>
