--- a/proyecto1/blogpost.html
+++ b/proyecto1/blogpost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> Bienvenido a hiperblog 2.0</title>
-        <link rel="stylesheet" href="css/estilos.css"
+        <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
         <div id="container">
@@ -12,8 +12,12 @@
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>y este parrafo es el inicio donde vamos a explicar las ramas que crearemos</p>
+                <p><img src="imagen/foto.png" width="100px"></p>
                 <p>los blogs son la mejor forma de compartir informacion</p>
                 <p>suscribete y dale like</p>
+            </div>
+            <div id ="footer">
+                Hecho con amor por vane
             </div>
         </div>
     </body>
